initial commit with notebooks and modules

--- a/TCGA_GetManifest.ipynb
+++ b/TCGA_GetManifest.ipynb
@@ -21,7 +21,7 @@
      "output_type": "stream",
      "text": [
       "Filippo_Valle \n",
-      "last updated: Thu Jun 18 2020 \n",
+      "last updated: Tue Jun 30 2020 \n",
       "\n",
       "CPython 3.7.6\n",
       "IPython 7.15.0\n",
@@ -37,8 +37,8 @@
       "processor  : x86_64\n",
       "CPU cores  : 2\n",
       "interpreter: 64bit\n",
-      "Git hash   : 9ce3cc4a89128a9aceabc9bf08f8179128f740aa\n",
-      "Git repo   : git@github.com:fvalle1/cancers\n",
+      "Git hash   : 728c5fcb2ae65fb2d06e3b61b8b167d388b13f95\n",
+      "Git repo   : git@github.com:fvalle1/topics.git\n",
       "Git branch : develop\n",
       "watermark 2.0.2\n"
      ]
