--- a/hSBM_topics.ipynb
+++ b/hSBM_topics.ipynb
@@ -2,6 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The watermark extension is already loaded. To reload it, use:\n",
+      "  %reload_ext watermark\n",
+      "Filippo_Valle \n",
+      "last updated: Tue Jun 30 2020 \n",
+      "\n",
+      "CPython 3.7.6\n",
+      "IPython 7.15.0\n",
+      "\n",
+      "pandas 1.0.4\n",
+      "numpy 1.18.5\n",
+      "textwrap unknown\n",
+      "matplotlib 3.2.1\n",
+      "sklearn 0.0\n",
+      "gseapy 0.9.18\n",
+      "\n",
+      "compiler   : GCC 7.5.0\n",
+      "system     : Linux\n",
+      "release    : 4.19.76-linuxkit\n",
+      "machine    : x86_64\n",
+      "processor  : x86_64\n",
+      "CPU cores  : 2\n",
+      "interpreter: 64bit\n",
+      "Git hash   : 728c5fcb2ae65fb2d06e3b61b8b167d388b13f95\n",
+      "Git repo   : git@github.com:fvalle1/topics.git\n",
+      "Git branch : develop\n",
+      "watermark 2.0.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext watermark\n",
+    "%watermark -v -m  -u -n -p pandas,numpy,textwrap,matplotlib,sklearn,gseapy -a Filippo_Valle -g -r -b -w"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -50,66 +93,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# topic size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for l in range(0,L+1):\n",
-    "    plot_topic_size(directory,l)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Topic O"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(\"mainTable.csv\", index_col=0,header=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_mv=pd.DataFrame(data=[df.mean(1), df.var(1),df.apply(lambda x: len([x[x>0]])/float(len(x)), 1)], index=['average', 'var', 'O']).transpose()\n",
-    "df_mv.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for l in range(0,L+1):\n",
-    "    fig = plt.figure(figsize=(15,8))\n",
-    "    ax = fig.subplots(1,2)\n",
-    "    candles = get_candles(directory,l,df_mv,ax[0])\n",
-    "    candlestick2_ohlc(ax[0], candles['open'],candles['high'],candles['low'],candles['close'],width=0.6,colordown='b')\n",
-    "    ax[1].hist((np.array(candles['open'])+np.array(candles['close']))/2, weights=candles['size'], range=(-0.05,1.05), bins=10, histtype='step')\n",
-    "    ax[1].set_xlabel(\"$O_i\", fontsize=18)\n",
-    "    plt.show()\n",
-    "    fig.savefig(\"%s/topic_Ocandles_level_%d.pdf\"%(directory,l))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Geneontology"
    ]
   },
@@ -122,19 +105,6 @@
     "from geneontology import get_ontology_df, ensg_to_symbol\n",
     "from tableanalyser import get_symbol\n",
     "import gseapy as gs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import importlib, geneontology,tableanalyser\n",
-    "importlib.reload(geneontology)\n",
-    "importlib.reload(tableanalyser)\n",
-    "from geneontology import get_ontology_df, ensg_to_symbol\n",
-    "from tableanalyser import get_symbol"
    ]
   },
   {
@@ -311,27 +281,6 @@
     "plt.show()\n",
     "fig.savefig(\"%s/pvaluecategories(%d).pdf\"%(directory,l))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
