--- a/Table_Creation.ipynb
+++ b/Table_Creation.ipynb
@@ -9,17 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The watermark extension is already loaded. To reload it, use:\n",
-      "  %reload_ext watermark\n",
       "Filippo_Valle \n",
-      "last updated: Thu Jun 18 2020 \n",
+      "last updated: Tue Jun 30 2020 \n",
       "\n",
       "CPython 3.7.6\n",
       "IPython 7.15.0\n",
@@ -36,9 +34,9 @@
       "processor  : x86_64\n",
       "CPU cores  : 2\n",
       "interpreter: 64bit\n",
-      "Git hash   : 3c8ae8f7082ca41e4f98ab084dc707834cbe547b\n",
-      "Git repo   : git@github.com:fvalle1/phd.git\n",
-      "Git branch : master\n",
+      "Git hash   : 728c5fcb2ae65fb2d06e3b61b8b167d388b13f95\n",
+      "Git repo   : git@github.com:fvalle1/topics.git\n",
+      "Git branch : develop\n",
       "watermark 2.0.2\n"
      ]
     }
