--- a/hSBM_clusters.ipynb
+++ b/hSBM_clusters.ipynb
@@ -2,6 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filippo_Valle \n",
+      "last updated: Tue Jun 30 2020 \n",
+      "\n",
+      "CPython 3.7.6\n",
+      "IPython 7.15.0\n",
+      "\n",
+      "pandas 1.0.4\n",
+      "numpy 1.18.5\n",
+      "matplotlib 3.2.1\n",
+      "json 2.0.9\n",
+      "sklearn 0.0\n",
+      "\n",
+      "compiler   : GCC 7.5.0\n",
+      "system     : Linux\n",
+      "release    : 4.19.76-linuxkit\n",
+      "machine    : x86_64\n",
+      "processor  : x86_64\n",
+      "CPU cores  : 2\n",
+      "interpreter: 64bit\n",
+      "Git hash   : 728c5fcb2ae65fb2d06e3b61b8b167d388b13f95\n",
+      "Git repo   : git@github.com:fvalle1/topics.git\n",
+      "Git branch : develop\n",
+      "watermark 2.0.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext watermark\n",
+    "%watermark -v -m  -u -n -p pandas,numpy,matplotlib,json,sklearn -a Filippo_Valle -g -r -b -w"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -17,17 +57,6 @@
     "from sklearn import metrics\n",
     "from hsbmpy import *\n",
     "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import importlib, hsbmpy\n",
-    "importlib.reload(hsbmpy)\n",
-    "from hsbmpy import *"
    ]
   },
   {
