--- a/hSBM_topic-dist.ipynb
+++ b/hSBM_topic-dist.ipynb
@@ -2,6 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filippo_Valle \n",
+      "last updated: Tue Jun 30 2020 \n",
+      "\n",
+      "CPython 3.7.6\n",
+      "IPython 7.15.0\n",
+      "\n",
+      "pandas 1.0.4\n",
+      "numpy 1.18.5\n",
+      "matplotlib 3.2.1\n",
+      "seaborn 0.10.1\n",
+      "\n",
+      "compiler   : GCC 7.5.0\n",
+      "system     : Linux\n",
+      "release    : 4.19.76-linuxkit\n",
+      "machine    : x86_64\n",
+      "processor  : x86_64\n",
+      "CPU cores  : 2\n",
+      "interpreter: 64bit\n",
+      "Git hash   : 728c5fcb2ae65fb2d06e3b61b8b167d388b13f95\n",
+      "Git repo   : git@github.com:fvalle1/topics.git\n",
+      "Git branch : develop\n",
+      "watermark 2.0.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext watermark\n",
+    "%watermark -v -m  -u -n -p pandas,numpy,matplotlib,seaborn -a Filippo_Valle -g -r -b -w"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -37,13 +76,6 @@
    "source": [
     "df = pd.read_csv(\"%s/%s_level_%d_topic-dist.csv\"%(algorithm,algorithm,L))\n",
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Specific topic"
    ]
   },
   {
@@ -112,13 +144,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## topic distr"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -140,20 +165,6 @@
    "source": [
     "for idoc in np.random.randint(len(df.index), size=10):\n",
     "    topic_distr_isample(idoc, df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Topic distr"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### kl"
    ]
   },
   {
@@ -251,7 +262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Topic maps"
+    "# Topic maps"
    ]
   },
   {
@@ -501,7 +512,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": "true"
+   },
    "source": [
     "### only health vs disease"
    ]
