--- a/alternative_clustering.ipynb
+++ b/alternative_clustering.ipynb
@@ -21,6 +21,7 @@
       "tensorflow 2.2.0\n",
       "sklearn 0.0\n",
       "scipy 1.4.1\n",
+      "topicpy 1.0.0\n",
       "\n",
       "compiler   : GCC 7.5.0\n",
       "system     : Linux\n",
@@ -29,7 +30,7 @@
       "processor  : x86_64\n",
       "CPU cores  : 2\n",
       "interpreter: 64bit\n",
-      "Git hash   : 728c5fcb2ae65fb2d06e3b61b8b167d388b13f95\n",
+      "Git hash   : 3047bd298aea1fc9c7cafce980412f5e9871bca1\n",
       "Git repo   : git@github.com:fvalle1/topics.git\n",
       "Git branch : develop\n",
       "watermark 2.0.2\n"
@@ -38,12 +39,12 @@
    ],
    "source": [
     "%load_ext watermark\n",
-    "%watermark -v -m  -u -n -p pandas,numpy,seaborn,tensorflow,sklearn,scipy -a Filippo_Valle -g -r -b -w"
+    "%watermark -v -m  -u -n -p pandas,numpy,seaborn,tensorflow,sklearn,scipy,topicpy -a Filippo_Valle -g -r -b -w"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,15 +53,15 @@
     "import numpy as np \n",
     "import seaborn as sns\n",
     "import os, sys\n",
-    "from hsbmpy import get_file, define_labels, get_cluster_given_l, get_max_available_L\n",
-    "from geneontology import topic_analysis\n",
+    "from topicpy.hsbmpy import get_file, define_labels, get_cluster_given_l, get_max_available_L\n",
+    "from topicpy.geneontology import topic_analysis\n",
     "import tensorflow as tf\n",
     "from sklearn.metrics import homogeneity_completeness_v_measure\n",
     "import scipy.cluster.hierarchy as shc\n",
     "from sklearn.cluster import AgglomerativeClustering\n",
     "from scipy.stats import pearsonr\n",
     "from sklearn.decomposition import LatentDirichletAllocation\n",
-    "from lda import lda"
+    "from topicpy.lda import lda"
    ]
   },
   {
@@ -248,174 +249,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from gensim.models.wrappers import LdaMallet\n",
-    "from gensim.corpora.dictionary import Dictionary\n",
-    "from gensim.test.utils import get_tmpfile\n",
-    "from gensim.corpora import MmCorpus"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corpus=list(map(list,map(lambda x: list(zip(range(len(df.index)), df[x])),df.columns)))\n",
-    "corpus"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dictionary=Dictionary([df.index])\n",
-    "[a for a in dictionary.items()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "out_file=get_tmpfile(\"/home/fvalle/phd/datasets/tcga/oversampling_10tissue/corpus.mm\")\n",
-    "MmCorpus.serialize(out_file, corpus, dictionary)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = LdaMallet(\"/home/fvalle/phd/Mallet/bin/mallet\", workers=5, corpus=corpus, num_topics=15, id2word=dictionary)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_topics=pd.DataFrame(data=model.get_topics().T, index=[a[1] for a in dictionary.items()], columns=[\"Topic %d\"%(t+1) for t in range(5)])\n",
-    "df_topics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_topic_distr=pd.read_csv(model.fdoctopics(), sep='\\t', header=None, index_col=0).drop(1,1)\n",
-    "df_topic_distr.columns=[\"Topic %d\"%(t+1) for t in range(5)]\n",
-    "df_topic_distr.index=df.columns\n",
-    "df_topic_distr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_topic_distr.apply(lambda x: x.idxmax().split(\" \")[1], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hiermodel = AgglomerativeClustering(n_clusters=10, affinity='euclidean', linkage='ward')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('clustersizes.txt') as f:\n",
-    "    xl=np.array(f.read().split('\\n')[:-1]).astype(int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.system(\"mkdir -p hierhsbm\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "true_out = []\n",
-    "for sample in pd.read_csv(\"%s/%s_level_%d_topic-dist.csv\"%('topsbm','topsbm',0), index_col=1).drop('i_doc', axis=1).index.values:\n",
-    "    try:\n",
-    "        true_out.append(get_file(sample, df_files)['primary_site'])\n",
-    "    except:\n",
-    "        print(sys.exc_info()[0])\n",
-    "        true_out.append('')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scores['hierhsbm']={\n",
-    "    'h':[],\n",
-    "    'c':[],\n",
-    "    'V':[]\n",
-    "}\n",
-    "for l,n_clusters in enumerate(xl):\n",
-    "    print(\"Fitting level %d with %d clusters\"%(l, n_clusters))\n",
-    "    df_topics = pd.read_csv(\"%s/%s_level_%d_topic-dist.csv\"%('topsbm','topsbm',l), index_col=1).drop('i_doc', axis=1)\n",
-    "    df_clusters = pd.DataFrame(columns=[\"Cluster %d\"%c for c in np.arange(n_clusters)+1])\n",
-    "    hiermodel.n_clusters=n_clusters\n",
-    "    out = hiermodel.fit_predict(df_topics.values)  \n",
-    "    for c in np.arange(out.max()+1)[::-1]:\n",
-    "        c_objects = df_topics.index[np.argwhere(out==c)].values.T[0]\n",
-    "        df_clusters[\"Cluster %d\"%(c+1)]=np.concatenate((c_objects,[np.nan for _ in np.arange(len(df_topics.index)-len(c_objects))]))\n",
-    "    df_clusters.dropna(axis=0,how='all', inplace=True)\n",
-    "    df_clusters.to_csv(\"hierhsbm/hierhsbm_level_%d_clusters.csv\"%(l), index=False, header=True)\n",
-    "    #metrics\n",
-    "    print(\"saving metrics\")\n",
-    "    score = (homogeneity_completeness_v_measure(true_out, out))\n",
-    "    scores['hierhsbm']['h'].append(score[0])\n",
-    "    scores['hierhsbm']['c'].append(score[1])\n",
-    "    scores['hierhsbm']['V'].append(score[2])\n",
-    "    \n",
-    "pd.DataFrame(data=scores['hierhsbm']).to_csv(\"%s/hierhsbm.scores\"%directory, header=True, index=False)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Topic mapping"
+    "# Topic mapping"
    ]
   },
   {
@@ -550,7 +387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## WGCNA"
+    "# WGCNA"
    ]
   },
   {
