--- a/hSBM_topic-dist.ipynb
+++ b/hSBM_topic-dist.ipynb
@@ -19,6 +19,7 @@
       "numpy 1.18.5\n",
       "matplotlib 3.2.1\n",
       "seaborn 0.10.1\n",
+      "topicpy 1.0.0\n",
       "\n",
       "compiler   : GCC 7.5.0\n",
       "system     : Linux\n",
@@ -27,7 +28,7 @@
       "processor  : x86_64\n",
       "CPU cores  : 2\n",
       "interpreter: 64bit\n",
-      "Git hash   : 728c5fcb2ae65fb2d06e3b61b8b167d388b13f95\n",
+      "Git hash   : 3047bd298aea1fc9c7cafce980412f5e9871bca1\n",
       "Git repo   : git@github.com:fvalle1/topics.git\n",
       "Git branch : develop\n",
       "watermark 2.0.2\n"
@@ -36,23 +37,23 @@
    ],
    "source": [
     "%load_ext watermark\n",
-    "%watermark -v -m  -u -n -p pandas,numpy,matplotlib,seaborn -a Filippo_Valle -g -r -b -w"
+    "%watermark -v -m  -u -n -p pandas,numpy,matplotlib,seaborn,topicpy -a Filippo_Valle -g -r -b -w"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
-    "from TCGA_files import *\n",
-    "from gtex import get_gtex_tissue\n",
+    "from topicpy.TCGA_files import *\n",
+    "from topicpy.gtex import get_gtex_tissue\n",
     "import seaborn as sns\n",
     "import sys, os\n",
-    "from hsbmpy import topic_distr_isample, topic_distr_sample,get_file, get_tissue_style, get_max_available_L\n",
-    "from TCGA_files import get_tcga_tissue"
+    "from topicpy.hsbmpy import topic_distr_isample, topic_distr_sample,get_file, get_tissue_style, get_max_available_L\n",
+    "from topicpy.TCGA_files import get_tcga_tissue"
    ]
   },
   {
@@ -512,9 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "### only health vs disease"
    ]
