--- a/predictor.ipynb
+++ b/predictor.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -64,7 +64,7 @@
     "import numpy as np\n",
     "import os,sys, gc\n",
     "import matplotlib.pyplot as plt\n",
-    "from hsbmpy import get_max_available_L\n",
+    "from topicpy.hsbmpy import get_max_available_L\n",
     "\n",
     "os.environ[\"TF_CUDNN_USE_AUTOTUNE\"]=\"0\" #to avoid Nvidia GPU warming up"
    ]
