--- a/hSBM_clusters.ipynb
+++ b/hSBM_clusters.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The watermark extension is already loaded. To reload it, use:\n",
+      "  %reload_ext watermark\n",
       "Filippo_Valle \n",
       "last updated: Tue Jun 30 2020 \n",
       "\n",
@@ -20,6 +22,7 @@
       "matplotlib 3.2.1\n",
       "json 2.0.9\n",
       "sklearn 0.0\n",
+      "topicpy 1.0.0\n",
       "\n",
       "compiler   : GCC 7.5.0\n",
       "system     : Linux\n",
@@ -28,7 +31,7 @@
       "processor  : x86_64\n",
       "CPU cores  : 2\n",
       "interpreter: 64bit\n",
-      "Git hash   : 728c5fcb2ae65fb2d06e3b61b8b167d388b13f95\n",
+      "Git hash   : 3047bd298aea1fc9c7cafce980412f5e9871bca1\n",
       "Git repo   : git@github.com:fvalle1/topics.git\n",
       "Git branch : develop\n",
       "watermark 2.0.2\n"
@@ -37,12 +40,12 @@
    ],
    "source": [
     "%load_ext watermark\n",
-    "%watermark -v -m  -u -n -p pandas,numpy,matplotlib,json,sklearn -a Filippo_Valle -g -r -b -w"
+    "%watermark -v -m  -u -n -p pandas,numpy,matplotlib,json,sklearn,topicpy -a Filippo_Valle -g -r -b -w"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,10 +55,10 @@
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "import matplotlib.cm as cm\n",
-    "from TCGA_files import get_tcga_tissue\n",
+    "from topicpy.TCGA_files import get_tcga_tissue\n",
     "#from ensembleAPI import geneinfo, genesinfo\n",
     "from sklearn import metrics\n",
-    "from hsbmpy import *\n",
+    "from topicpy.hsbmpy import *\n",
     "import os"
    ]
   },
@@ -367,7 +370,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hsbmpy import normalise_score\n",
+    "from topicpy.hsbmpy import normalise_score\n",
     "if \"mixed\" in scores.keys():\n",
     "    scores.pop(\"mixed\")\n",
     "norm_scores = scores.copy()\n",
