--- a/hSBM_topics.ipynb
+++ b/hSBM_topics.ipynb
@@ -2,15 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The watermark extension is already loaded. To reload it, use:\n",
-      "  %reload_ext watermark\n",
       "Filippo_Valle \n",
       "last updated: Tue Jun 30 2020 \n",
       "\n",
@@ -23,6 +21,7 @@
       "matplotlib 3.2.1\n",
       "sklearn 0.0\n",
       "gseapy 0.9.18\n",
+      "topicpy 1.0.0\n",
       "\n",
       "compiler   : GCC 7.5.0\n",
       "system     : Linux\n",
@@ -31,7 +30,7 @@
       "processor  : x86_64\n",
       "CPU cores  : 2\n",
       "interpreter: 64bit\n",
-      "Git hash   : 728c5fcb2ae65fb2d06e3b61b8b167d388b13f95\n",
+      "Git hash   : 3047bd298aea1fc9c7cafce980412f5e9871bca1\n",
       "Git repo   : git@github.com:fvalle1/topics.git\n",
       "Git branch : develop\n",
       "watermark 2.0.2\n"
@@ -40,12 +39,12 @@
    ],
    "source": [
     "%load_ext watermark\n",
-    "%watermark -v -m  -u -n -p pandas,numpy,textwrap,matplotlib,sklearn,gseapy -a Filippo_Valle -g -r -b -w"
+    "%watermark -v -m  -u -n -p pandas,numpy,textwrap,matplotlib,sklearn,gseapy,topicpy -a Filippo_Valle -g -r -b -w"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,8 +55,8 @@
     "from sklearn import metrics\n",
     "import matplotlib.ticker as mticker\n",
     "import sys, os\n",
-    "from hsbmpy import plot_topic_size, get_max_available_L\n",
-    "from hypergeom import parameters_for_hypergeometric, build_map, plot_map"
+    "from topicpy.hsbmpy import plot_topic_size, get_max_available_L\n",
+    "from topicpy.hypergeom import parameters_for_hypergeometric, build_map, plot_map"
    ]
   },
   {
