--- a/hSBM_word-dist.ipynb
+++ b/hSBM_word-dist.ipynb
@@ -2,7 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filippo_Valle \n",
+      "last updated: Tue Jun 30 2020 \n",
+      "\n",
+      "CPython 3.7.6\n",
+      "IPython 7.15.0\n",
+      "\n",
+      "pandas 1.0.4\n",
+      "numpy 1.18.5\n",
+      "textwrap unknown\n",
+      "matplotlib 3.2.1\n",
+      "sklearn 0.0\n",
+      "gseapy 0.9.18\n",
+      "topicpy 1.0.0\n",
+      "\n",
+      "compiler   : GCC 7.5.0\n",
+      "system     : Linux\n",
+      "release    : 4.19.76-linuxkit\n",
+      "machine    : x86_64\n",
+      "processor  : x86_64\n",
+      "CPU cores  : 2\n",
+      "interpreter: 64bit\n",
+      "Git hash   : 3047bd298aea1fc9c7cafce980412f5e9871bca1\n",
+      "Git repo   : git@github.com:fvalle1/topics.git\n",
+      "Git branch : develop\n",
+      "watermark 2.0.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext watermark\n",
+    "%watermark -v -m  -u -n -p pandas,numpy,textwrap,matplotlib,sklearn,gseapy,topicpy -a Filippo_Valle -g -r -b -w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,20 +53,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import tensorflow as tf\n",
-    "from hsbmpy import get_max_available_L, get_file\n",
+    "from topicpy.hsbmpy import get_max_available_L, get_file\n",
     "import tensorflow as tf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import importlib, geneontology\n",
-    "from geneontology import *\n",
-    "importlib.reload(geneontology)\n",
-    "from geneontology import *"
    ]
   },
   {
