--- a/run_graph.ipynb
+++ b/run_graph.ipynb
@@ -340,7 +340,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "collapsed": "true",
     "id": "Rpy9eQ2WLFN1"
    },
    "source": [
@@ -1043,7 +1042,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "collapsed": "true",
     "id": "dAmO1tHQLFOE"
    },
    "source": [
@@ -1052,9 +1050,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "## Highly Variable Genes"
    ]
@@ -1199,7 +1195,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "collapsed": "true",
     "id": "EjZgH93w2wRm"
    },
    "source": [
@@ -1307,37 +1302,13 @@
    },
    "source": [
     "# Run hierarchical Stochastic Block Model\n",
-    "We run [stochastic block model](https://github.com/martingerlach/hSBM_Topicmodel/tree/develop).\n",
+    "We run [stochastic block model](https://github.com/martingerlach/hSBM_Topicmodel/tree/develop) forked from [https://github.com/martingerlach/hSBM_Topicmodel](https://github.com/martingerlach/hSBM_Topicmodel).\n",
     "\n",
     "Clone the repository with the code and add it to the system path\n",
     "\n",
     "```bash\n",
-    "git clone --branch develop https://github.com/martingerlach/hSBM_Topicmodel/\n",
+    "git clone --branch develop_share https://github.com/fvalle1/hSBM_Topicmodel/\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cloning into 'hSBM_Topicmodel'...\n",
-      "remote: Enumerating objects: 12, done.\u001b[K\n",
-      "remote: Counting objects: 100% (12/12), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (12/12), done.\u001b[K\n",
-      "remote: Total 260 (delta 4), reused 5 (delta 0), pack-reused 248\u001b[K\n",
-      "Receiving objects: 100% (260/260), 3.61 MiB | 3.04 MiB/s, done.\n",
-      "Resolving deltas: 100% (60/60), done.\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git clone --branch develop https://github.com/martingerlach/hSBM_Topicmodel/\n",
-    "sys.path.append(\"hSBM_Topicmodel\")"
    ]
   },
   {
@@ -1354,6 +1325,7 @@
    },
    "outputs": [],
    "source": [
+    "sys.path.append(\"/home/jovyan/work/topics/hSBM_Topicmodel/\")\n",
     "from sbmtm import sbmtm\n",
     "\n",
     "# create the model\n",
@@ -1389,9 +1361,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "## Put the data into the model\n",
     "\n",
@@ -1405,7 +1375,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "collapsed": "true",
     "id": "viYv-ehPtIzq"
    },
    "source": [
@@ -1473,7 +1442,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "collapsed": "true",
     "id": "ULe4g3qTtLFY"
    },
    "source": [
@@ -1500,7 +1468,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "collapsed": "true",
     "id": "Ldd2ZxostNve"
    },
    "source": [
