--- a/unified/run_unified.ipynb
+++ b/unified/run_unified.ipynb
@@ -1,6 +1,54 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analyse Unified dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The watermark extension is already loaded. To reload it, use:\n",
+      "  %reload_ext watermark\n",
+      "Filippo_Valle \n",
+      "last updated: Fri Jul 03 2020 \n",
+      "\n",
+      "CPython 3.7.6\n",
+      "IPython 7.15.0\n",
+      "\n",
+      "pandas 1.0.4\n",
+      "numpy 1.18.5\n",
+      "scanpy 1.5.1\n",
+      "requests 2.23.0\n",
+      "\n",
+      "compiler   : GCC 7.5.0\n",
+      "system     : Linux\n",
+      "release    : 4.19.76-linuxkit\n",
+      "machine    : x86_64\n",
+      "processor  : x86_64\n",
+      "CPU cores  : 2\n",
+      "interpreter: 64bit\n",
+      "Git hash   : 3a295021b742191b8d17d5650fd6812da659a568\n",
+      "Git repo   : git@github.com:fvalle1/topics.git\n",
+      "Git branch : develop\n",
+      "watermark 2.0.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext watermark\n",
+    "%watermark -v -m  -u -n -p pandas,numpy,scanpy,requests -a Filippo_Valle -g -r -b -w"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -11,15 +59,21 @@
     "import scanpy as sc\n",
     "import requests\n",
     "import json\n",
-    "import os, sys\n",
-    "#sys.path.append('/home/fvalle/phd/master_thesis/hsbm/')"
+    "import os, sys"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Download data"
+    "## Download data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Please download data from [https://doi.org/10.6084/m9.figshare.5330593](https://doi.org/10.6084/m9.figshare.5330593) or [https://figshare.com/articles/Data_record_2/5330575](https://figshare.com/articles/Data_record_2/5330575) and save all the files in a directory called data"
    ]
   },
   {
@@ -28,22 +82,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#path/to/files/downloaded/from \n",
-    "#https://doi.org/10.6084/m9.figshare.5330593\n",
-    "#https://figshare.com/articles/Data_record_2/5330575\n",
-    "working_dir = \"/home/jovyan/work/phd/datasets/merged/\"\n",
+    "#path/to/files/downloaded/\n",
+    "working_dir = \"/home/jovyan/work/datasets/unified/\"\n",
     "os.chdir(working_dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(\"mainTable.csv\", index_col=0)\n",
-    "df_files = pd.read_csv(\"files.dat\", index_col=0)\n",
-    "df.info()"
    ]
   },
   {
@@ -56,12 +97,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We download files metadate from [GTEx project](gtexportal.org)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_gtex=pd.read_csv(\"https://storage.googleapis.com/gtex_analysis_v8/annotations/GTEx_Analysis_v8_Annotations_SampleAttributesDS.txt\", sep='\\t', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then download metadata for TCGA files using [GDC API](https://docs.gdc.cancer.gov/API/Users_Guide/Getting_Started/)"
    ]
   },
   {
@@ -96,6 +151,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We create an empty dataframe to fulfill with data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -117,6 +179,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We create a file of metadata"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -126,11 +195,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "import our helper functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from unified import get_source, get_status\n",
+    "\n",
     "def get_site(file):\n",
     "    '''\n",
     "    Returns GTEX or TCGA primary site\n",
@@ -140,23 +218,7 @@
     "    if 'GTEX' in file:\n",
     "        return df_gtex.at[file, 'SMTS']\n",
     "    if 'TCGA' in file:\n",
-    "        return df_tcga.at[file[:12],'primary_site']\n",
-    "\n",
-    "def get_source(file):\n",
-    "    if 'GTEX' in file:\n",
-    "        return 'gtex'\n",
-    "    if 'TCGA' in file:\n",
-    "        return 'tcga'\n",
-    "\n",
-    "#https://www.researchgate.net/post/How_can_I_get_the_normal_sample_of_TCGA_data\n",
-    "def get_status(file):\n",
-    "    if 'GTEX' in file:\n",
-    "        return 'healthy'\n",
-    "    if 'TCGA' in file:\n",
-    "        if (file[13:15]==\"11\") or (file[13:15]==\"10\"):\n",
-    "            return 'healthy'\n",
-    "        else:\n",
-    "            return \"tumor\""
+    "        return df_tcga.at[file[:12],'primary_site']"
    ]
   },
   {
@@ -172,12 +234,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save the DataFrame just created"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df.to_csv(\"mainTable.csv\", index=True, header=True)\n",
+    "df.to_csv(\"mainTable.csv\", index=True, header=True)\n",
     "df_files.to_csv(\"files.dat\", index=True, header=True)"
    ]
   },
@@ -194,9 +263,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = pd.read_csv(\"mainTable.csv\", index_col=0)\n",
+    "df = pd.read_csv(\"mainTable.csv\", index_col=0)\n",
     "df_files = pd.read_csv(\"files.dat\", index_col=0)\n",
-    "df.head()"
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Group together same site with different names"
    ]
   },
   {
@@ -235,6 +311,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We uniformly sample some samples from the chosen tissues"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -245,6 +328,13 @@
     "for site in sites_with_enough_statistics:\n",
     "    samples = samples.append(df_files[(df_files['primary_site']==site) & (df_files['dataset']=='tcga')].sample(50, random_state=rs))\n",
     "    samples = samples.append(df_files[(df_files['primary_site']==site) & (df_files['dataset']=='gtex')].sample(50, random_state=rs))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Just a check"
    ]
   },
   {
@@ -263,6 +353,13 @@
    "outputs": [],
    "source": [
     "samples.groupby('dataset').count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Split into train and test set"
    ]
   },
   {
@@ -305,7 +402,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Use scanpy to filter HVG"
+    "# Filtering Highly Variable Genes with *scapy*"
    ]
   },
   {
@@ -350,7 +447,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Use SBM"
+    "# Use hSBM"
    ]
   },
   {
@@ -359,6 +456,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sys.path.append(\"/home/jovyan/work/topics/hSBM_Topicmodel/\")\n",
     "from sbmtm import sbmtm"
    ]
   },
@@ -388,13 +486,6 @@
    "source": [
     "model.save_graph(\"graph.xml.gz\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
