add tables linked in cancers

--- a/unified/run_unified.ipynb
+++ b/unified/run_unified.ipynb
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please download data from [https://doi.org/10.6084/m9.figshare.5330593](https://doi.org/10.6084/m9.figshare.5330593) or [https://figshare.com/articles/Data_record_2/5330575](https://figshare.com/articles/Data_record_2/5330575) and save all the files in a directory called data"
+    "Please download data from [https://doi.org/10.6084/m9.figshare.5330593](https://doi.org/10.6084/m9.figshare.5330593) and save all the files in a directory called *data*"
    ]
   },
   {
