--- a/predictor.ipynb
+++ b/predictor.ipynb
@@ -45,9 +45,9 @@
    "metadata": {},
    "source": [
     "This Notebook can be run on Colab:\n",
-    "- predicting status (**health** / **tumor**) [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://drive.google.com/file/d/1vS3aAG-2falzRHuqnzyVL53vUzkAC31-/view?usp=sharing)\n",
+    "- predicting status (**health** / **tumor**) [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/drive/1vS3aAG-2falzRHuqnzyVL53vUzkAC31-/view?usp=sharing)\n",
     "\n",
-    "- predicting **sites** [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/drive/1cIO0u92uZ6sp95ceRlBFA4ccBWZWN95g?usp=sharingg)"
+    "- predicting **sites** [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/drive/1cIO0u92uZ6sp95ceRlBFA4ccBWZWN95g?usp=sharing)"
    ]
   },
   {
