--- a/alternative_clustering.ipynb
+++ b/alternative_clustering.ipynb
@@ -403,7 +403,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for l in range(5):\n",
+    "from hsbmpy import get_max_available_L\n",
+    "for l in range(get_max_available_L(directory, \"wgcna\")+1):\n",
     "    df_wgcna = pd.read_csv(\"wgcna/wgcna_level_%d_labels.csv\"%l, index_col=0)\n",
     "    totalobjcets = len(df_wgcna.index)\n",
     "    out = df_wgcna['x'].values\n",
