--- a/unified/run_unified.ipynb
+++ b/unified/run_unified.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
       "The watermark extension is already loaded. To reload it, use:\n",
       "  %reload_ext watermark\n",
       "Filippo_Valle \n",
-      "last updated: Fri Jul 03 2020 \n",
+      "last updated: Tue Jul 28 2020 \n",
       "\n",
       "CPython 3.7.6\n",
       "IPython 7.15.0\n",
@@ -28,6 +28,7 @@
       "numpy 1.18.5\n",
       "scanpy 1.5.1\n",
       "requests 2.23.0\n",
+      "topicpy 1.1.1\n",
       "\n",
       "compiler   : GCC 7.5.0\n",
       "system     : Linux\n",
@@ -36,7 +37,7 @@
       "processor  : x86_64\n",
       "CPU cores  : 2\n",
       "interpreter: 64bit\n",
-      "Git hash   : 3a295021b742191b8d17d5650fd6812da659a568\n",
+      "Git hash   : 4a9ac49ecf96bb0c677f40cd3dc04d74c6f2210f\n",
       "Git repo   : git@github.com:fvalle1/topics.git\n",
       "Git branch : develop\n",
       "watermark 2.0.2\n"
@@ -45,12 +46,12 @@
    ],
    "source": [
     "%load_ext watermark\n",
-    "%watermark -v -m  -u -n -p pandas,numpy,scanpy,requests -a Filippo_Valle -g -r -b -w"
+    "%watermark -v -m  -u -n -p pandas,numpy,scanpy,requests,topicpy -a Filippo_Valle -g -r -b -w"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,12 +79,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "#path/to/files/downloaded/\n",
-    "working_dir = \"/home/jovyan/work/datasets/unified/\"\n",
+    "working_dir = f\"{os.getcwd()}\"\n",
     "os.chdir(working_dir)"
    ]
   },
@@ -230,6 +231,7 @@
     "df_files.insert(0, 'primary_site', [get_site(file) for file in df.columns])\n",
     "df_files.insert(1, 'dataset', [get_source(file) for file in df.columns])\n",
     "df_files.insert(1, 'status', [get_status(file) for file in df.columns])\n",
+    "df_files[\"dataset_status\"]=df_files[\"dataset\"]+\"_\"+df_files[\"status\"]\n",
     "df_files.groupby([\"dataset\",\"status\"]).count()"
    ]
   },
@@ -485,6 +487,94 @@
    "outputs": [],
    "source": [
     "model.save_graph(\"graph.xml.gz\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analyse clusters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from topicpy.hsbmpy import clusteranalysis\n",
+    "clusteranalysis(working_dir,[\"primary_site\", \"status\", \"dataset_status\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'get_scores' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-b8ef4e5c2478>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mscores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mscores\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'tissues'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_scores\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mworking_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf_files\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdf_files\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malgorithm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"topsbm\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mscores\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'status'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_scores\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mworking_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf_files\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdf_files\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malgorithm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"topsbm\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mscores\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'shuffle'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_scores_shuffled\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mworking_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf_files\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malgorithm\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'topsbm'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'get_scores' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "scores = {}\n",
+    "scores['tissues'] = get_scores(working_dir, labels, df_files=df_files, algorithm = \"topsbm\", verbose=False)[labels[0]]\n",
+    "scores['status'] = get_scores(working_dir, labels, df_files=df_files, algorithm = \"topsbm\", verbose=False)[labels[1]]\n",
+    "scores['shuffle'] = get_scores_shuffled(working_dir, df_files, label=label, algorithm='topsbm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from topicpy.hsbmpy import normalise_score\n",
+    "if \"mixed\" in scores.keys():\n",
+    "    scores.pop(\"mixed\")\n",
+    "norm_scores = scores.copy()\n",
+    "normalise_score(norm_scores, base_algorithm=\"shuffle\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from topicpy.hsbmpy import add_score_lines\n",
+    "\n",
+    "fig=plt.figure(figsize=(20,15))\n",
+    "ax = fig.subplots(1)\n",
+    "add_score_lines(ax,scores, V=\"norm_V\", labels=labels)\n",
+    "#ax.set_xscale('linear')\n",
+    "plt.xlim(1,2000)\n",
+    "plt.ylim(-1,65)\n",
+    "plt.show()\n",
+    "fig.savefig(\"%s/metric_scores_%s.pdf\"%(working_dir,analysis))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_score_lines"
    ]
   }
  ],
