fix dependencies and check notebooks

--- a/alternative_clustering.ipynb
+++ b/alternative_clustering.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Clustring other than hSBM\n",
+    "Run LDA, wgcna, topic mapping and hierarchical"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -9,16 +17,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Creating directory /home/jovyan/.config/bioservices \n",
       "Filippo_Valle \n",
-      "last updated: Tue Jul 28 2020 \n",
+      "last updated: Mon Aug 31 2020 \n",
       "\n",
-      "CPython 3.7.6\n",
-      "IPython 7.15.0\n",
+      "CPython 3.8.5\n",
+      "IPython 7.17.0\n",
       "\n",
-      "pandas 1.0.4\n",
-      "numpy 1.18.5\n",
+      "pandas 1.1.1\n",
+      "numpy 1.19.1\n",
       "seaborn 0.10.1\n",
-      "tensorflow 2.2.0\n",
+      "tensorflow 2.3.0\n",
       "sklearn 0.0\n",
       "scipy 1.4.1\n",
       "topicpy 1.1.0\n",
@@ -30,9 +39,9 @@
       "processor  : x86_64\n",
       "CPU cores  : 2\n",
       "interpreter: 64bit\n",
-      "Git hash   : 0e506afd06928855c4d2cdccf9d4b792ec1e90a1\n",
-      "Git repo   : git@github.com:fvalle1/topics.git\n",
-      "Git branch : develop\n",
+      "Git hash   : \n",
+      "Git repo   : \n",
+      "Git branch : \n",
       "watermark 2.0.2\n"
      ]
     }
@@ -1554,6 +1563,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "run this in the shell\n",
+    "```bash\n",
+    "export PATH=$PATH:/home/jovyan/work/topicmapping/bin\n",
+    "topicmap -f corpus.txt -r 10 -t 10 -seed 42 -o tm\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1657,7 +1677,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use [WGCNA.ipynb](WGCNA.ipynb) to run analyses and come back here to adapt data to next analyses"
+    "Use [WGCNA.ipynb](WGCNA.ipynb) to run analyses before continuing and store data in the next step"
    ]
   },
   {
@@ -1717,7 +1737,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
