--- a/hSBM_clusters.ipynb
+++ b/hSBM_clusters.ipynb
@@ -10,14 +10,14 @@
      "output_type": "stream",
      "text": [
       "Filippo_Valle \n",
-      "last updated: Wed Jul 29 2020 \n",
+      "last updated: Mon Aug 31 2020 \n",
       "\n",
-      "CPython 3.7.6\n",
-      "IPython 7.15.0\n",
+      "CPython 3.8.5\n",
+      "IPython 7.17.0\n",
       "\n",
-      "pandas 1.0.4\n",
-      "numpy 1.18.5\n",
-      "matplotlib 3.2.1\n",
+      "pandas 1.1.1\n",
+      "numpy 1.19.1\n",
+      "matplotlib 3.2.2\n",
       "json 2.0.9\n",
       "sklearn 0.0\n",
       "topicpy 1.1.0\n",
@@ -29,9 +29,9 @@
       "processor  : x86_64\n",
       "CPU cores  : 2\n",
       "interpreter: 64bit\n",
-      "Git hash   : 18951c60241c25cbee184093eb96c454034ab084\n",
-      "Git repo   : git@github.com:fvalle1/topics.git\n",
-      "Git branch : develop\n",
+      "Git hash   : \n",
+      "Git repo   : \n",
+      "Git branch : \n",
       "watermark 2.0.2\n"
      ]
     }
@@ -54,7 +54,6 @@
     "from matplotlib import pyplot as plt\n",
     "import matplotlib.cm as cm\n",
     "from topicpy.TCGA_files import get_tcga_tissue\n",
-    "#from ensembleAPI import geneinfo, genesinfo\n",
     "from sklearn import metrics\n",
     "from topicpy.hsbmpy import *\n",
     "import os"
@@ -64,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## query many"
+    "## read data"
    ]
   },
   {
@@ -142,17 +141,6 @@
     "L=get_max_available_L(directory, algorithm)\n",
     "df_clusters = pd.read_csv(\"%s/%s/%s_level_%d_clusters.csv\"%(directory,algorithm,algorithm,L), header=[0])\n",
     "df_clusters.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df_files = pd.read_csv(\"https://storage.googleapis.com/gtex_analysis_v8/annotations/GTEx_Analysis_v8_Annotations_SampleAttributesDS.txt\", sep='\\t')\n",
-    "#df_files.set_index('SAMPID', inplace=True)\n",
-    "#df_files.dropna(how='all', axis=0).to_csv(\"%s/files.dat\"%directory, index=True, header=True)"
    ]
   },
   {
@@ -576,6 +564,7 @@
     "for alg1, alg2 in zip([\"topsbm\", \"topsbm\", \"topsbm\", \"topsbm\", \"tm\", \"tm\", \"tm\", \"lda\", \"lda\", \"wgcna\"],[\"tm\",\"lda\", \"wgcna\", \"hierarchical-log\", \"lda\", \"wgcna\", \"hierarchical-log\", \"wgcna\", \"hierarchical-log\", \"hierarchical-log\"]):\n",
     "    df_algs.at[alg1,alg2]=float(v_measure_score(labels[alg1], labels[alg2]))\n",
     "    \n",
+    "# this data are read from hSBM_topics.ipynb\n",
     "df_algs.at[\"tm\", \"topsbm\"]=0.014612\n",
     "df_algs.at[\"lda\", \"topsbm\"]=0.027809\n",
     "df_algs.at[\"wgcna\", \"topsbm\"]=0.011345\n",
@@ -608,13 +597,6 @@
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -633,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
