--- a/hSBM_topics.ipynb
+++ b/hSBM_topics.ipynb
@@ -10,17 +10,17 @@
      "output_type": "stream",
      "text": [
       "Filippo_Valle \n",
-      "last updated: Tue Jul 28 2020 \n",
+      "last updated: Mon Aug 31 2020 \n",
       "\n",
-      "CPython 3.7.6\n",
-      "IPython 7.15.0\n",
+      "CPython 3.8.5\n",
+      "IPython 7.17.0\n",
       "\n",
-      "pandas 1.0.4\n",
-      "numpy 1.18.5\n",
+      "pandas 1.1.1\n",
+      "numpy 1.19.1\n",
       "textwrap unknown\n",
-      "matplotlib 3.2.1\n",
+      "matplotlib 3.2.2\n",
       "sklearn 0.0\n",
-      "gseapy 0.9.18\n",
+      "gseapy 0.10.1\n",
       "topicpy 1.1.0\n",
       "\n",
       "compiler   : GCC 7.5.0\n",
@@ -30,9 +30,9 @@
       "processor  : x86_64\n",
       "CPU cores  : 2\n",
       "interpreter: 64bit\n",
-      "Git hash   : 0e506afd06928855c4d2cdccf9d4b792ec1e90a1\n",
-      "Git repo   : git@github.com:fvalle1/topics.git\n",
-      "Git branch : develop\n",
+      "Git hash   : \n",
+      "Git repo   : \n",
+      "Git branch : \n",
       "watermark 2.0.2\n"
      ]
     }
@@ -587,7 +587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
