--- a/predictor.ipynb
+++ b/predictor.ipynb
@@ -10,16 +10,16 @@
      "output_type": "stream",
      "text": [
       "Filippo_Valle \n",
-      "last updated: Tue Jun 30 2020 \n",
+      "last updated: Mon Aug 31 2020 \n",
       "\n",
-      "CPython 3.7.6\n",
-      "IPython 7.15.0\n",
+      "CPython 3.8.5\n",
+      "IPython 7.17.0\n",
       "\n",
-      "pandas 1.0.4\n",
-      "numpy 1.18.5\n",
+      "pandas 1.1.1\n",
+      "numpy 1.19.1\n",
       "seaborn 0.10.1\n",
-      "tensorflow 2.2.0\n",
-      "matplotlib 3.2.1\n",
+      "tensorflow 2.3.0\n",
+      "matplotlib 3.2.2\n",
       "\n",
       "compiler   : GCC 7.5.0\n",
       "system     : Linux\n",
@@ -28,9 +28,9 @@
       "processor  : x86_64\n",
       "CPU cores  : 2\n",
       "interpreter: 64bit\n",
-      "Git hash   : 728c5fcb2ae65fb2d06e3b61b8b167d388b13f95\n",
-      "Git repo   : git@github.com:fvalle1/topics.git\n",
-      "Git branch : develop\n",
+      "Git hash   : \n",
+      "Git repo   : \n",
+      "Git branch : \n",
       "watermark 2.0.2\n"
      ]
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -80,7 +80,7 @@
    "outputs": [],
    "source": [
     "algorithm = \"topsbm\"\n",
-    "directory='/home/jovyan/work/datasets/merged'\n",
+    "directory=f'{os.getcwd()}/unified'\n",
     "L = get_max_available_L(directory, algorithm)-2\n",
     "os.chdir(directory)"
    ]
@@ -650,7 +650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
