new figures of the paper

--- a/single_cell.ipynb
+++ b/single_cell.ipynb
@@ -725,6 +725,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run [WGCNA.ipynb](datasets/single-cell/WGCNA.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
